Added the bulk of the code to support dealing cards, starting games, playing cards. None has been tested, not styled.

--- a/client/less/chat.less
+++ b/client/less/chat.less
@@ -4,6 +4,12 @@
     .chat-window {
         height: 25%;
         overflow: auto;
+
+        .chat-message {
+            font-size: 13px;
+            border-bottom: 1px solid #00b3bf;
+            padding-bottom: 5px;
+        }
     }
 
     .send-chat-message {
