Aded redux, and multiple game support is in process.

--- a/client/less/game.less
+++ b/client/less/game.less
@@ -1,8 +1,15 @@
 .game-container {
-    // .cards-in-hand {
-        
-    // }
+    .start-or-select-game {
+        textarea, input, button, select {
+            width: 100%;
+        }    
+    }
     
+    label {
+        display: block;
+        margin-top: 10px;
+    }
+
     .card {
         font-size: 64px;
         padding: 0;
