Updated the handling of joining a game, working on selecting teams.

--- a/client/less/game.less
+++ b/client/less/game.less
@@ -2,7 +2,42 @@
     .start-or-select-game {
         textarea, input, button, select {
             width: 100%;
-        }    
+        }
+
+        textarea {
+            height: 100px;
+        }
+        
+        .games-waiting-for-players {
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            overflow: auto;
+            padding: 10px;
+
+            .game {
+                border-bottom: 1px solid #ddd;
+                padding-bottom: 10px;
+                margin-bottom: 10px;
+
+                .badge {
+                    padding: 5px;
+                    width: 250px;
+                    margin-left: 15px;
+                }
+            }
+        }
+    }
+
+    .players-list {
+        .player-pick-teams {
+            text-align: center;
+
+            .players-name {
+                padding: 15px;
+                display: inline-block;
+                width: 250px;
+            }
+        }
     }
     
     label {
